Products.CMFDefault Changelog
=============================

2.2.0 (unreleased)
------------------

- ZMI: Prevent users from creating content through the ZMI by hiding the
  entry for "CMFDefault Content".

- SyndicationTool: Removed obsolete documentation link from the
  Overview ZMI tab.
  (https://bugs.launchpad.net/zope-cmf/+bug/185090)
  
- Document: Fixed Zope 2.12 compatibility.
  zope.structuredtext is now used instead of StructuredText.

- Image, File:  make ZMI "edit" view work.

- views: Added ContentEditFormBase and FileAddView.
  This shows how form-driven content creation works. The content is created
  without using the constructor methods provided by the types tool.

- DublinCore: Modified the 'addCreator' implementation.
  It no longer depends on the membership tool.

- DiscussionItem: Removed 'addDiscussionItem' function.
  This was dead code. 'createReply' is used for adding DiscussionItems.

- content: Factories no longer sends add events.

- profiles: Removed obsolete local import and export step registrations.

- setup handler: Improved 'various' import step.
  Added flag file check and global registration.

- Document and NewsItem: It is now possible to register a utility
  (ILinebreakNormalizer) that can normalize line breaks upon editing or
  rendering out to FTP.
  (http://www.zope.org/Collectors/CMF/174)

- Document and NewsItem: Added a format choice for ReStructuredText.
  (http://www.zope.org/Collectors/CMF/485)

- interfaces: Removed deprecated oldstyle interfaces.


2.1.2-beta (2008-08-26)
------------------

- completed devolution from monolithic CMF package into its component
  products that are distributed as eggs from PyPI.

- File, Image:  Make the ZMI edit tab work.

- DiscussionItem: Fixed indexing of 'in_reply_to'.


2.1.1 (2008-01-06)
------------------

- PropertiesTool: Fix a faulty manage_changeProperties
  invocation which broke the 'Reconfigure Portal' screen
  (https://bugs.launchpad.net/zope-cmf/+bug/174246)

