@@ -2,10 +2,14 @@
 <object name="portal_workflow" meta_type="CMF Workflow Tool">
  <property name="title"></property>
  <object name="default_workflow" meta_type="Workflow"/>
+ <object name="singlestate_workflow" meta_type="Workflow"/>
  <bindings>
   <default>
    <bound-workflow workflow_id="default_workflow"/>
   </default>
+  <type type_id="Discussion Item">
+    <bound-workflow workflow_id="singlestate_workflow"/>
+  </type>
   <type type_id="CMF BTree Folder"/>
   <type type_id="Folder"/>
  </bindings>
