@@ -1,0 +1,28 @@
+<?xml version="1.0"?>
+<dc-workflow workflow_id="singlestate_workflow"
+             title="Single-state workflow"
+             description="" state_variable="review_state"
+             initial_state="published">
+
+ <permission>Access contents information</permission>
+ <permission>Modify portal content</permission>
+ <permission>View</permission>
+
+ <state state_id="published" title="Public">
+  <permission-map name="Access contents information"
+                  acquired="True">
+   <permission-role>Anonymous</permission-role>
+   <permission-role>Manager</permission-role>
+  </permission-map>
+  <permission-map name="Modify portal content"
+                  acquired="False">
+   <permission-role>Manager</permission-role>
+   <permission-role>Owner</permission-role>
+  </permission-map>
+  <permission-map name="View" acquired="True">
+   <permission-role>Anonymous</permission-role>
+   <permission-role>Manager</permission-role>
+  </permission-map>
+ </state>
+
+</dc-workflow>
